--- a/pihole/docker-compose.pihole.yml
+++ b/pihole/docker-compose.pihole.yml
@@ -1,4 +1,5 @@
-# More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
+version: "3.8"
+
 services:
   pihole:
     container_name: pihole
@@ -9,31 +10,49 @@ services:
       - "53:53/udp"
       # Default HTTP Port
       - "80:80/tcp"
-      # Default HTTPs Port. FTL will generate a self-signed certificate
+      # Default HTTPS Port (FTL generates self-signed cert)
       - "443:443/tcp"
-      # Uncomment the line below if you are using Pi-hole as your DHCP server
+      # Uncomment if using Pi-hole as DHCP server
       #- "67:67/udp"
-      # Uncomment the line below if you are using Pi-hole as your NTP server
+      # Uncomment if using Pi-hole as NTP server
       #- "123:123/udp"
     environment:
-      # Set the appropriate timezone for your location (https://en.wikipedia.org/wiki/List_of_tz_database_time_zones), e.g:
+      # Set your timezone (e.g., https://en.wikipedia.org/wiki/List_of_tz_database_time_zones)
       TZ: 'Europe/London'
-      # Set a password to access the web interface. Not setting one will result in a random password being assigned
+      # Web interface password
       FTLCONF_webserver_api_password: 'correct horse battery staple'
-      # If using Docker's default `bridge` network setting the dns listening mode should be set to 'all'
+      # DNS listening mode for Docker bridge network
       FTLCONF_dns_listeningMode: 'all'
-    # Volumes store your data between container upgrades
     volumes:
-      # For persisting Pi-hole's databases and common configuration file
+      # Persist Pi-hole data
       - './etc-pihole:/etc/pihole'
-      # Uncomment the below if you have custom dnsmasq config files that you want to persist. Not needed for most starting fresh with Pi-hole v6. If you're upgrading from v5 you and have used this directory before, you should keep it enabled for the first v6 container start to allow for a complete migration. It can be removed afterwards. Needs environment variable FTLCONF_misc_etc_dnsmasq_d: 'true'
+      # Uncomment if you have custom dnsmasq configs (not needed for fresh v6 installs)
       #- './etc-dnsmasq.d:/etc/dnsmasq.d'
     cap_add:
-      # See https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-      # Required if you are using Pi-hole as your DHCP server, else not needed
-      - NET_ADMIN
-      # Required if you are using Pi-hole as your NTP client to be able to set the host's system time
-      - SYS_TIME
-      # Optional, if Pi-hole should get some more processing time
-      - SYS_NICE
+      - NET_ADMIN  # Required for DNS (and DHCP if enabled)
+      - SYS_TIME   # Required for NTP if enabled
+      - SYS_NICE   # Optional for better process priority
     restart: unless-stopped
+    networks:
+      - proxy_network
+
+  squid:
+    container_name: squid_proxy
+    image: ubuntu/squid:latest
+    ports:
+      - "3128:3128"  # Squid proxy port
+    volumes:
+      - squid_cache:/var/spool/squid
+      - ./squid.conf:/etc/squid/squid.conf
+    environment:
+      - TZ=UTC
+    restart: unless-stopped
+    networks:
+      - proxy_network
+
+networks:
+  proxy_network:
+    driver: bridge
+
+volumes:
+  squid_cache:
