--- a/pihole/squid.conf
+++ b/pihole/squid.conf
@@ -1,11 +1,17 @@
 # squid.conf
 http_port 3128
-cache_dir ufs /var/spool/squid 100 16 256  # 100 MB cache
+cache_dir ufs /var/spool/squid 100 16 256
 maximum_object_size 1024 MB
 cache_mem 256 MB
 
-# Allow access from local network (adjust as needed)
-acl localnet src 192.168.0.0/16  # Example subnet
+# Define regex-based blocklist
+acl blocked_patterns url_regex -i "/etc/squid/blocked_patterns.txt"
+
+# Deny blocked patterns
+http_access deny blocked_patterns
+
+# Allow local network
+acl localnet src 192.168.0.0/16
 http_access allow localnet
 http_access deny all
 
