--- a/pihole/Dockerfile.squid
+++ b/pihole/Dockerfile.squid
@@ -1,5 +1,5 @@
-FROM debian:buster-slim
-RUN apt-get update && apt-get install -y squid && rm -rf /var/lib/apt/lists/*
+FROM arm32v6/alpine
+RUN apk add --no-cache squid
 COPY squid.conf /etc/squid/squid.conf
 COPY blocked_patterns.txt /etc/squid/blocked_patterns.txt
 CMD ["squid", "-N", "-f", "/etc/squid/squid.conf"]
