--- a/pihole/Dockerfile.squid
+++ b/pihole/Dockerfile.squid
@@ -2,4 +2,5 @@ FROM arm32v6/alpine
 RUN apk add --no-cache squid
 COPY squid.conf /etc/squid/squid.conf
 COPY blocked_patterns.txt /etc/squid/blocked_patterns.txt
+RUN squid -z -f /etc/squid/squid.conf
 CMD ["squid", "-N", "-d", "1", "-f", "/etc/squid/squid.conf"]
