--- a/pihole/Dockerfile.squid
+++ b/pihole/Dockerfile.squid
@@ -1,5 +1,5 @@
 FROM arm32v6/alpine
-RUN apt-get update && apt-get install -y squid && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache squid
 COPY squid.conf /etc/squid/squid.conf
 COPY blocked_patterns.txt /etc/squid/blocked_patterns.txt
 COPY entrypoint.sh /entrypoint.sh
