--- a/pihole/docker-compose.pihole.yml
+++ b/pihole/docker-compose.pihole.yml
@@ -1,27 +1,27 @@
 version: "3.8"
 
 services:
-  # pihole:
-  #   container_name: pihole
-  #   image: pihole/pihole:latest
-  #   ports:
-  #     - "53:53/tcp"
-  #     - "53:53/udp"
-  #     - "80:80/tcp"
-  #     - "443:443/tcp"
-  #   environment:
-  #     TZ: 'Europe/London'
-  #     FTLCONF_webserver_api_password: 'correct horse battery staple'
-  #     FTLCONF_dns_listeningMode: 'all'
-  #   volumes:
-  #     - './etc-pihole:/etc/pihole'
-  #   cap_add:
-  #     - NET_ADMIN
-  #     - SYS_TIME
-  #     - SYS_NICE
-  #   restart: unless-stopped
-  #   networks:
-  #     - proxy_network
+  pihole:
+    container_name: pihole
+    image: pihole/pihole:latest
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "80:80/tcp"
+      - "443:443/tcp"
+    environment:
+      TZ: 'Europe/London'
+      FTLCONF_webserver_api_password: 'correct horse battery staple'
+      FTLCONF_dns_listeningMode: 'all'
+    volumes:
+      - './etc-pihole:/etc/pihole'
+    cap_add:
+      - NET_ADMIN
+      - SYS_TIME
+      - SYS_NICE
+    restart: unless-stopped
+    networks:
+      - proxy_network
 
   squid:
     container_name: squid_proxy
