--- a/pihole/squid.conf
+++ b/pihole/squid.conf
@@ -1,9 +1,22 @@
-http_port 3128
+# Transparent HTTP port
+http_port 3128 intercept
+
+# Transparent HTTPS port with SSL bumping
+https_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB cert=/etc/squid/squid-ca.pem
+
 maximum_object_size 1024 MB
 cache_mem 256 MB
+
+# ACLs
 acl blocked_patterns url_regex -i "/etc/squid/blocked_patterns.txt"
 http_access deny blocked_patterns
 acl localnet src 192.168.0.0/16
 http_access allow localnet
+
+# SSL bumping rules
+acl SSL_ports port 443
+ssl_bump peek all
+ssl_bump bump all
+
 http_access deny all
 access_log stdio:/var/log/squid/access.log squid
