--- a/pihole/squid.conf
+++ b/pihole/squid.conf
@@ -1,11 +1,9 @@
-# Transparent HTTP port
+# Transparent ports
 http_port 3128 intercept
-
-# Transparent HTTPS port with SSL bumping
 https_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB cert=/etc/squid/squid-ca.pem
 
-maximum_object_size 1024 MB
-cache_mem 256 MB
+# No caching
+# (cache_dir removed)
 
 # ACLs
 acl blocked_patterns url_regex -i "/etc/squid/blocked_patterns.txt"
@@ -13,7 +11,7 @@ http_access deny blocked_patterns
 acl localnet src 192.168.0.0/16
 http_access allow localnet
 
-# SSL bumping rules
+# SSL bumping
 acl SSL_ports port 443
 ssl_bump peek all
 ssl_bump bump all
