--- a/pihole/squid.conf
+++ b/pihole/squid.conf
@@ -1,11 +1,20 @@
+# Forward-proxy port (explicit proxy)
+http_port 3130
+
+# Transparent ports
 http_port 3128 intercept
 https_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB cert=/etc/squid/squid-ca.pem
+
+# ACLs
 acl blocked_patterns url_regex -i "/etc/squid/blocked_patterns.txt"
 http_access deny blocked_patterns
 acl localnet src 192.168.0.0/16
 http_access allow localnet
+
+# SSL bumping
 acl SSL_ports port 443
 ssl_bump peek all
 ssl_bump bump all
+
 http_access deny all
 access_log stdio:/var/log/squid/access.log squid
