--- a/pihole/docker-compose.pihole.yml
+++ b/pihole/docker-compose.pihole.yml
@@ -31,6 +31,7 @@ services:
     ports:
       - "3128:3128"
       - "3129:3129"
+      - "3130:3130"  # Forward-proxy port
     volumes:
       - ./squid.conf:/etc/squid/squid.conf
       - ./blocked_patterns.txt:/etc/squid/blocked_patterns.txt
@@ -42,7 +43,7 @@ services:
       - TZ=UTC
     cap_add:
       - NET_ADMIN
-    network_mode: "host"  # For transparent mode
+    network_mode: "host"
     restart: unless-stopped
 
 networks:
